--- a/trent/Makefile
+++ b/trent/Makefile
@@ -3,3 +3,6 @@ run:
 
 setup:
 	@pip3 install -r requirements.txt
+
+pack-extension:
+	@/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --pack-extension=
