Added MetaMask extension

--- a/trent/Makefile
+++ b/trent/Makefile
@@ -5,4 +5,4 @@ setup:
 	@pip3 install -r requirements.txt
 
 pack-extension:
-	@/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --pack-extension=
+	/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --pack-extension=/Users/trent/Library/Application\ Support/Google/Chrome/Default/Extensions/nkbihfbeogaeaoehlefnkodbefgpgknn
